many improvements
metro theme
albums view
fixed player not going to next track in queue for ogg
enable autoresizing columns in tables